--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>T. Sreenivasulu | Vite + React + TS</title>
+   
+    <!-- Primary Meta Tags -->
+  <title>T. Sreenivasulu | WebDeveloper</title>
+  <meta name="title" content="T. Sreenivasulu | WebDeveloper | Vite + React + TS">
+  <meta name="description" content="WebDeveloper using PHP with MySQL, WordPress, Codeigniter and Bootstrap Framework. Intrested in Reactjs Nodejs Python">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://sreenivas.netlify.app/">
+  <meta property="og:title" content="T. Sreenivasulu | WebDeveloper | Vite + React + TS">
+  <meta property="og:description" content="WebDeveloper using PHP with MySQL, WordPress, Codeigniter and Bootstrap Framework. Intrested in Reactjs Nodejs Python">
+  <meta property="og:image" content="https://source.unsplash.com/random/600x500?WebDevelopment">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://sreenivas.netlify.app/">
+  <meta property="twitter:title" content="T. Sreenivasulu | WebDeveloper | Vite + React + TS">
+  <meta property="twitter:description" content="WebDeveloper using PHP with MySQL, WordPress, Codeigniter and Bootstrap Framework. Intrested in Reactjs Nodejs Python">
+  <meta property="twitter:image" content="https://source.unsplash.com/random/600x500?WebDevelopment">
   </head>
   <body>
     <div id="root"></div>
