--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
   <title>T. Sreenivasulu | WebDeveloper</title>
   <meta name="title" content="T. Sreenivasulu | WebDeveloper | Vite + React + TS">
   <meta name="description" content="WebDeveloper using PHP with MySQL, WordPress, Codeigniter and Bootstrap Framework. Intrested in Reactjs Nodejs Python">
-
+ 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://sreenivas.netlify.app/">
   <meta property="og:title" content="T. Sreenivasulu | WebDeveloper | Vite + React + TS">
   <meta property="og:description" content="WebDeveloper using PHP with MySQL, WordPress, Codeigniter and Bootstrap Framework. Intrested in Reactjs Nodejs Python">
-  <meta property="og:image" content="https://source.unsplash.com/random/600x500?WebDevelopment">
+  <meta property="og:image" content="https://picsum.photos/id/0/1200/800" id="ogf">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://sreenivas.netlify.app/">
   <meta property="twitter:title" content="T. Sreenivasulu | WebDeveloper | Vite + React + TS">
   <meta property="twitter:description" content="WebDeveloper using PHP with MySQL, WordPress, Codeigniter and Bootstrap Framework. Intrested in Reactjs Nodejs Python">
-  <meta property="twitter:image" content="https://source.unsplash.com/random/600x500?WebDevelopment">
+  <meta property="twitter:image" content="https://picsum.photos/id/1/1200/800" id="ogt">
   </head>
   <body>
     <div id="root"></div>
